--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -8,6 +8,7 @@
     android:padding="16dp">
 
     <TextView
+        android:id="@+id/studyingStatusText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="공부중..."
@@ -21,10 +22,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="00:00"
-        android:textSize="120sp"
+        android:textSize="80sp"
         android:textStyle="bold"
         android:textColor="@color/purple_500"
-        android:fontFamily="monospace" />
+        android:fontFamily="monospace"
+        android:maxWidth="300dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
